<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="#ffffffff" android:weightSum="1"
              android:paddingLeft="10dp">

    <ImageView
            android:layout_width="163dp"
            android:layout_height="0dp"
            android:id="@+id/imageView" android:layout_gravity="center_horizontal" android:contentDescription="@string/about_icon_name"
            android:src="@drawable/icon" android:layout_weight="0.57"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:textColor="#ff000000" android:textSize="29sp" android:gravity="center|center_horizontal"
            android:longClickable="false"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/version_about"
            android:id="@+id/textView2" android:textColor="#ffcb881d" android:textSize="20sp"
            android:layout_marginTop="10dp" android:paddingLeft="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/version"
            android:id="@+id/textView3" android:textColor="#ff000000" android:paddingLeft="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/programmer"
            android:id="@+id/textView4" android:textColor="#ffcb881d" android:textSize="20sp"
            android:layout_marginTop="10dp" android:paddingLeft="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/developer_name"
            android:id="@+id/textView5" android:textIsSelectable="false" android:textColor="#ff000000"
            android:paddingLeft="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email_name"
            android:id="@+id/textView6" android:textColor="#ffcb881d" android:textSize="20sp"
            android:layout_marginTop="10dp" android:paddingLeft="10dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/email"
            android:id="@+id/textView7" android:textColor="#ff000000" android:paddingLeft="10dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/button" android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:onClick="back_main"/>
</LinearLayout>