<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:weightSum="1"
              android:background="#fff6fff9">

    <TextView
            android:textColor="#ff000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/username"
            android:id="@+id/sae" android:paddingLeft="10dp"/>
    <EditText
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/user"
            android:background="@drawable/field_background"
            android:layout_weight="0.04" android:inputType="text" android:paddingLeft="10dp"/>

    <TextView
            android:textColor="#ff000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password"
            android:id="@+id/textView14"
            android:paddingLeft="10dp"/>
    <EditText
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/psw"
            android:background="@drawable/field_background"
            android:password="true"
            android:layout_weight="0.04" android:inputType="text" android:paddingLeft="10dp"/>

    <Button
            android:onClick="save_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save"
            android:background="@drawable/button_background"
            android:layout_gravity="center_horizontal" />

    <Button
            android:onClick="goto_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:id="@+id/back"
            android:background="@drawable/button_background"
            android:layout_gravity="center_horizontal" />
</LinearLayout>